layout bugfix

--- a/app/assets/stylesheets/dance_rounds.scss
+++ b/app/assets/stylesheets/dance_rounds.scss
@@ -28,16 +28,21 @@
     text-align: center;
     .info_normal {
       font-size: 3em;
+      text-align: center;
     }
     .info_big {
       font-size: 6em;
+      text-align: center;
     }
+
     .info_small {
       font-size: 2em;
+      text-align: center;
     }
   }
   .red-font {
     color: red;
+    text-align: center;
   }
 
   .center {
